--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -1,5 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@400;600;700&display=swap");
 @use "../abstracts/fonts" as *;
+@use "../abstracts/colors" as *;
+@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@400;600;700&display=swap");
 
 body {
   font-family: "Red Hat Text", sans-serif;
