--- a/src/sass/abstracts/_colors.scss
+++ b/src/sass/abstracts/_colors.scss
@@ -1,7 +1,7 @@
 $primary: hsl(0, 0%, 100%);
 $secondary: hsl(237, 18%, 59%);
 $accent: hsl(345, 95%, 68%);
-$accent-dark: darken($accent, 20%);
+$accent-dark: hsl(345, 60%, 58%);
 $flipcard: hsl(236, 21%, 26%);
-$flipcard-dark: hsl(235, 16%, 14%);
+$flipcard-dark: hsl(236, 21%, 23%);
 $background: hsl(234, 17%, 12%);
