--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -9,8 +9,19 @@ body {
 }
 
 h1 {
-  font-size: $fs-600;
+  font-size: $fs-500;
   color: $primary;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+  text-align: center;
+}
+
+.timer {
+  h2 {
+    font-size: $fs-300;
+    text-transform: uppercase;
+    letter-spacing: 0.4em;
+  }
 }
 
 .flipcard {
