--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -47,3 +47,13 @@ h1 {
     color: hsl(228, 45%, 44%);
   }
 }
+
+@media screen and (min-width: 900px) {
+  .flipcard {
+    font-size: $fs-xl;
+  }
+
+  .timer h2 {
+    font-size: $fs-400;
+  }
+}
