--- a/src/sass/components/_flipcard.scss
+++ b/src/sass/components/_flipcard.scss
@@ -80,3 +80,9 @@ $animation-duration: 200ms;
     transform: rotateX(0deg);
   }
 }
+
+@media screen and (min-width: 900px) {
+  .flipcard > * {
+    width: 150px;
+  }
+}
