Add padding to number and update attribution

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -44,7 +44,12 @@ h1 {
   text-align: center;
 
   a {
-    color: hsl(228, 45%, 44%);
+    color: $primary;
+    transition: color 0.2s ease-in;
+
+    &:hover {
+      color: $accent;
+    }
   }
 }
 
